@@ -20,6 +20,10 @@
 #include <fltk/draw.h>
 #include <fltk/Symbol.h>
 
+#ifdef _WIN32
+#define isfinite(x) _finite(x)
+#endif
+
 #include "core/mrvThread.h"
 #include "core/mrvColorSpaces.h"
 
@@ -27,6 +31,7 @@
 #include "gui/mrvVectorscope.h"
 #include "gui/mrvImageView.h"
 #include "gui/mrvColorInfo.h"
+#include "video/mrvDrawEngine.h"
 #include "mrViewer.h"
 
 
@@ -191,13 +196,45 @@ namespace mrv
     assert( xmax < pic->width() ); 
     assert( ymax < pic->height() ); 
 
+    mrv::DrawEngine* engine = uiMain->uiView->engine();
+
+    ImageView::PixelValue v = (ImageView::PixelValue) 
+                              uiMain->uiPixelValue->value();
+
+    float gain = uiMain->uiView->gain();
+    float gamma = uiMain->uiView->gamma();
+    float one_gamma = 1.0f / gamma;
+
+    CMedia::Pixel rp;
     for ( unsigned y = ymin; y <= ymax; y += stepY )
       {
 	for ( unsigned x = xmin; x <= xmax; x += stepX )
 	  {
-	    const CMedia::Pixel& p = pic->pixel( x, y );
-	    CMedia::Pixel hsv = color::rgb::to_hsv( p );
-	    draw_pixel( r, p, hsv );
+	    const CMedia::Pixel& op = pic->pixel( x, y );
+
+            if ( uiMain->uiView->use_lut() && v == ImageView::kRGBA_Full )
+            {
+                engine->evaluate( img, 
+                                  (*(Imath::V3f*)&op), 
+                                  (*(Imath::V3f*)&rp) );
+            }
+            else
+            {
+                rp = op;
+            }
+
+            if ( v != ImageView::kRGBA_Original ) 
+            {
+                if ( rp.r > 0.0f && isfinite(rp.r) )
+                    rp.r = powf(rp.r * gain, one_gamma);
+                if ( rp.g > 0.0f && isfinite(rp.g) )
+                    rp.g = powf(rp.g * gain, one_gamma);
+                if ( rp.b > 0.0f && isfinite(rp.b) )
+                    rp.b = powf(rp.b * gain, one_gamma);
+            }
+
+	    CMedia::Pixel hsv = color::rgb::to_hsv( rp );
+	    draw_pixel( r, rp, hsv );
 	  }
       }
 
