@@ -9,7 +9,7 @@ export FFMPEG_ROOT=F:/code/lib/ffmpeg-20141004-git-1c4c78e-win64-shared
 
 export  GLUT_ROOT_PATH="F:/code/lib/freeglut/"
 export FLTK2_DIR="F:/code/lib/fltk-2.0-win64"
-export MAGICK_HOME="F:/code/lib/ImageMagick-6.7.4"
+export MAGICK_HOME="F:/code/lib/ImageMagick-6.8.9-win64"
 export GLEW_ROOT="F:/code/lib/x64/glew-1.9.0"
 export POSTGRESQL_ROOT="C:/Program Files/PostgreSQL/9.1"
 export TCLAP_ROOT="F:/code/lib/tclap-1.2.0"
